2006-04-08  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/set.c (set_palette_file) docs/gnuplot.doc: Binary palette files
	are supported as well. Example:
	    set palette file "palette.bin" binary record=64 using 1:2:3

2006-04-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.os2: Define more features.

	* config/makefile.os2:
	  - add a list of required/recommended tools and libraries,
	  - make use of pre-built version of libgd from hobbes.nmsu.edu,
	  - change requirements for newer versions of PDFlib,
	  - replace shell script to create allterm.h by 4allterm.cmd in Rexx.

	* src/os2/4allterm.cmd: New Rexx script to create allterm.h, much faster
	than previous code and does not require the unix tool chain to be
	installed.

2006-04-07  laboratoryman  <laboratoryman@users.sourceforge.net>

	* src/term.c (test_term): No terminal currently implements any head
	fill style (curr_arrow_headfilled) other than 0/1/2.  So don't use 3 as
	a test case.

2006-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm: New line-join terminal option {rounded|butt},
	with support for smooth joining of closed polygons via the recently
	added newpath()/closepath() mechanism.

	* src/gadgets.c (draw_clip_arrow): Provide a routine in the core
	code that clips arrow head/tail to the canvas boundaries. This means
	we don't have to do the clipping in do_arrow(), which has been messy.

	* src/graph3d.c (plot_arrows3d plot3d_vectors)
	src/graphics.c (place_arrows do_key_sample get_arrow)
	Draw arrows using new routine draw_clip_arrow.
	Addresses bug #1348015 and others.

	* src/term.c (do_arrow): Add a note that the clipping here is now
	redundant, and can be removed.  Defer removal to a separate patchset.

2006-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Fix inadvertant breakage due to an
	accidentally deleted call to arrow_parse().

2006-04-04  Harald Harders  <h.harders@tu-bs.de>
