@@ -1,3 +1,8 @@
+2006-04-08  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* src/win/pgnuplot.c: Patch for SF bug [1232950] "-persist option does
+	not work in Version 4.0.0 (Windows)".
+
 2006-04-08  Daniel Sebald  <daniel.sebald@ieee.org>
 
 	* src/set.c (set_palette_file) docs/gnuplot.doc: Binary palette files
